--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
       with: { name: generated-keymaps, path: config/keymap }
 
     # ───────── stage keymaps and helper files ─────────
-    - name: Stage keymaps, overlays, and dtsi files into source tree
+    - name: Stage locales, keymaps, overlays, and dtsi files into source tree
       shell: bash
       run: |
         # Create overlays directory inside zmk/app
@@ -105,6 +105,7 @@ jobs:
 
           # copy helper .dtsi files if they exist
           cp config/*.dtsi zmk/app/overlays/ 2>/dev/null || true
+          cp config/*.h zmk/app/overlays/ 2>/dev/null || true
           cp config/keymap/*.dtsi zmk/app/overlays/ 2>/dev/null || true
         fi
 
