--- a/config/keymap/combos.dtsi
+++ b/config/keymap/combos.dtsi
@@ -29,7 +29,7 @@
         };
 
         combo_precision_mouse {
-            bindings = <&m0 6>;
+            bindings = <&mo 6>;
             key-positions = <16 36>;
         };
     };
