--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,14 @@ include:
     shield: charybdis_right
     keymap: qwerty
     snippet: studio-rpc-usb-uart
+
+  - board: nice_nano_v2
+    shield: charybdis_left
+    keymap: qwerty
+    snippet: studio-rpc-usb-uart
+
+  - board: nice_nano_v2
+    shield: charybdis_dongle dongle_screen
+    keymap: qwerty
+    snippet: studio-rpc-usb-uart
+
