--- a/boards/shields/charybdis_dongle/charybdis_right.conf
+++ b/boards/shields/charybdis_dongle/charybdis_right.conf
@@ -1,3 +1,5 @@
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT=y
 ## PMW3610 Driver
 ## https://github.com/badjeff/zmk-pmw3610-driver
 CONFIG_SPI=y
