--- a/boards/shields/charybdis_dongle/charybdis_dongle.conf
+++ b/boards/shields/charybdis_dongle/charybdis_dongle.conf
@@ -6,7 +6,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 ## Display Configuratoin
 ## https://zmk.dev/docs/config/displays
-# CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY=y
 
 # ## Track words per minute
 # CONFIG_ZMK_WPM=y
