--- a/build.yaml
+++ b/build.yaml
@@ -18,15 +18,15 @@ keymap:
   - qwerty
 
 include:
-  - board: nice_nano_v2
-    shield: charybdis_right
-    keymap: qwerty
-    snippet: studio-rpc-usb-uart
+  # - board: nice_nano_v2
+  #   shield: charybdis_right
+  #   keymap: qwerty
+  #   snippet: studio-rpc-usb-uart
 
-  - board: nice_nano_v2
-    shield: charybdis_left
-    keymap: qwerty
-    snippet: studio-rpc-usb-uart
+  # - board: nice_nano_v2
+  #   shield: charybdis_left
+  #   keymap: qwerty
+  #   snippet: studio-rpc-usb-uart
 
   - board: nice_nano_v2
     shield: charybdis_dongle dongle_screen
