--- a/config/west.yml
+++ b/config/west.yml
@@ -11,7 +11,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: v0.3.0
+      revision: main
       import: app/west.yml
 
     - name: zmk-pmw3610-driver
@@ -20,6 +20,6 @@ manifest:
 
     - name: zmk-dongle-screen
       remote: janpfischer
-      revision: 0.1.2
+      revision: main
   self:
     path: config
