--- a/build.yaml
+++ b/build.yaml
@@ -1,24 +1,33 @@
-# This file generates the GitHub Actions matrix.
+# This file defines the GitHub Actions build matrix.
+# Each entry represents one firmware build job with its shields and configuration.
+# The matrix is generated from this config automatically by the GitHub Actions workflow.
 
-board:
-  - nice_nano_v2
-
-shield:
-  - charybdis_left
-  - charybdis_right
-  - charybdis_dongle dongle_screen
-  - settings_reset
-
-format:
-  - bt
-  - dongle
-  - reset
-
-keymap:
-  - qwerty
-
-include:
-  - board: nice_nano_v2
-    shield: charybdis_right
+matrix:
+  # Bluetooth build - generates two firmware binaries (left and right halves)
+  - name: qwerty-bt
+    format: bt
+    board: nice_nano_v2
     keymap: qwerty
-    snippet: studio-rpc-usb-uart
+    shields:
+      - charybdis_left
+      - charybdis_right
+    snippet: studio-rpc-usb-uart  # Applied to charybdis_right only
+
+  # Dongle build - generates three firmware binaries (left, right, dongle)
+  - name: qwerty-dongle
+    format: dongle
+    board: nice_nano_v2
+    keymap: qwerty
+    shields:
+      - charybdis_left
+      - charybdis_right
+      - charybdis_dongle dongle_screen
+
+  # Reset build - generates one firmware binary
+  - name: reset-nanov2
+    format: reset
+    board: nice_nano_v2
+    keymap: default
+    shields:
+      - settings_reset
+
