fixed on dongle screen latest release

--- a/config/west.yml
+++ b/config/west.yml
@@ -20,6 +20,6 @@ manifest:
 
     - name: zmk-dongle-screen
       remote: janpfischer
-      revision: main
+      revision: 0.1.2
   self:
     path: config
